Fixed responsiveness up until 1135px, changed spacing and border radius on nav, images, and other stuff

--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -17,6 +17,10 @@ ul {
   list-style: none;
 }
 
+button {
+  cursor: pointer;
+}
+
 .wrapper {
   max-width: 1280px;
   width: 90%;
