--- a/src/sass/_newReferences.scss
+++ b/src/sass/_newReferences.scss
@@ -1,4 +1,4 @@
-.newRefs {
+.newRefs, .episodeInfo {
 
     h3, h4 {
         background: $colour6;
@@ -7,14 +7,26 @@
     
     h3 {
         font-size: 3rem;
+        border-radius: 5px 5px 0 0;
         padding-top: 10px;
     }
 
     h4 {
         font-size: 2.5rem;
+        border-radius: 0 0 5px 5px;
         padding-bottom: 10px;
         margin-bottom: 20px;
     }
+
+    // for .episodeInfo
+    img {
+        margin-top: 20px;
+        border-radius: 5px;
+    }
+}
+
+.episodeInfo h3 {
+    border-radius: 5px;
 }
 
 .episodeContainer {
